Modification couleur splashscreen

--- a/web/index.html
+++ b/web/index.html
@@ -64,7 +64,7 @@
   </script>
 
 
-  <!-- to here. -->ƒ
+  <!-- to here. -->
 
   <script src="main.dart.js" type="application/javascript"></script>
   
